test/sema/inference/variable_type_inference_error.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: number
}

fn main(): void { 
  mut s;
  s = 0;

  // CHECK: [[# @LINE + 1 ]]:9: error: expected to assign 'number' but received 'S' instead
  s = S { x: 1 };
}

// CHECK-NOT: {{.*error.*}}
